# apache-thrift-example

./: .gitignore  CMakeLists.txt  README.md  client.py  example.thrift  server.cpp
apache-thrift/: CMakeLists.txt
